Fix stylings for responsiveness. Old styling would break the page.

--- a/frontend-next-migration/src/preparedPages/MainPage/ui/_components/sections/PlayWithUs/PlayWithUs.module.scss
+++ b/frontend-next-migration/src/preparedPages/MainPage/ui/_components/sections/PlayWithUs/PlayWithUs.module.scss
@@ -1,13 +1,11 @@
 .SectionPlayWithUs {
   width: 100%;
-  //max-width: 95vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  min-height: 800px;
+  min-height: 100vh;
   position: relative;
-  gap:20px;
+  gap: 20px;
 }
 
 .title {
@@ -117,53 +115,60 @@
 }
 
 
-
 .Content {
-  display: flex;
   width: 90%;
-  gap:20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
   margin-top: 2rem;
 }
 
+.ContentWithNav{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  justify-content: center;
+  align-items:center;
+}
+
 .WebGLNotice {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: rgba(0, 0, 0, 0.8);
+  margin-top: auto;
+  align-self: center;
+  background-color: var(--transparent-bg-darker);
   color: white;
   padding: 10px 15px;
   border-radius: 5px;
   font-size: 0.9rem;
-  max-width: 90%;
+  max-width: 30%;
   text-align: center;
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
+
 .WarningIcon {
   font-size: 1.2rem;
   color: yellow;
-}
+ }
+
 
 @media (max-width: 768px) {
   .WebGLNotice {
-    font-size: 0.8rem;
-    padding: 8px 12px;
+   max-width: 50%;
+   }
   }
-}
-
-.ContentWithNav{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  justify-content: center;
-  align-items:center;
-}
+  .WarningIcon {
+   font-size: 1.2rem;
+   color: yellow;
+  }
 
 .sideImg {
   width: 35%;
+  align-self: center;
+  margin-left: 25vh;
 }
 
 
